tests/lean/protected_test.lean.expected.out
protected_test.lean:2:8: error: unknown identifier 'induction_on'
protected_test.lean:3:8: error: unknown identifier 'rec_on'
nat.induction_on : ∀ n, ?M_1 0 → (∀ a, ?M_1 a → ?M_1 (succ a)) → ?M_1 n
le.rec_on : le ?M_1 ?M_2 → ?M_3 ?M_1 → (∀ {b}, le ?M_1 b → ?M_3 b → ?M_3 (succ b)) → ?M_3 ?M_2
le.rec_on : le ?M_1 ?M_2 → ?M_3 ?M_1 → (∀ {b}, le ?M_1 b → ?M_3 b → ?M_3 (succ b)) → ?M_3 ?M_2
protected_test.lean:8:10: error: unknown identifier 'rec_on'
le.rec_on : le ?M_1 ?M_2 → ?M_3 ?M_1 → (∀ {b}, le ?M_1 b → ?M_3 b → ?M_3 (succ b)) → ?M_3 ?M_2
